--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook" : "test-storybook --watchAll"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.26",
     "@storybook/addon-a11y": "^8.0.5",
+    "@storybook/addon-designs": "^8.0.0",
     "@storybook/addon-essentials": "^8.0.5",
     "@storybook/addon-interactions": "^8.0.5",
     "@storybook/addon-links": "^8.0.5",
@@ -35,6 +37,7 @@
     "@storybook/react": "^8.0.5",
     "@storybook/react-vite": "^8.0.5",
     "@storybook/test": "^8.0.5",
+    "@storybook/test-runner": "^0.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
