--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test" : "test-storybook --watchAll"
+    "test": "test-storybook --watchAll"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "chromatic": "^11.3.0",
     "dotenv": "^16.4.5",
@@ -21,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.74.1"
   },
