--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "msw": "^2.2.14",
+    "msw-storybook-addon": "^2.0.0",
     "storybook": "^8.0.5",
     "storybook-addon-remix-react-router": "^3.0.0",
     "typescript": "^5.2.2",
