--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.74.1"
+    "sass": "^1.74.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.26",
