--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "chromatic": "^11.3.0",
     "dotenv": "^16.4.5",
+    "emoji-picker-react": "^4.9.2",
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
